NXT-2647: Add tests for createSpace
NXT-2647 (BE add createSpace endpoint)